# online-coding-interviews

./: .gitignore  DEPLOYMENT.md  Makefile  PRODUCTION-FIXES.md  README.md  render.yaml
.github/: CI-CD.md  SECRETS-SETUP.md
.github/workflows/: ci-cd.yml
backend/: .env.example  .gitignore  DOCKER.md  Dockerfile  MAKEFILE.md  MIGRATIONS.md  Makefile  PERMISSIONS_FIX.md  README.md  docker-compose.yml  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 021923422528_initializing_database_tables.py
backend/app/: main.py
backend/app/api/: participants.py  sessions.py
backend/app/core/: config.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: session_service.py  websocket_manager.py
backend/tests/: conftest.py  test_participants.py  test_sessions.py  test_websocket.py
docs/: API.md  BACKEND_GUIDE.md  MAKEFILE_SUMMARY.md  RENDER-SPA-ROUTING.md  REORGANIZATION.md  openapi.yaml
frontend/: .env.example  INTEGRATION.md  MAKEFILE.md  Makefile  TESTING.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CodeEditor.css  CodeEditor.jsx  ExecutionPanel.css  ExecutionPanel.jsx  HomePage.css  HomePage.jsx  InterviewRoom.css  InterviewRoom.jsx  LanguageSelector.css  LanguageSelector.jsx  ParticipantList.css  ParticipantList.jsx
frontend/src/config/: api.config.js
frontend/src/hooks/: index.js  useCodeExecution.js  useCollaboration.js  useConnectionState.js  useSession.js
(+16 files in other folders)
